Update and rename ext_config.ini to London-ext_config.ini

--- a/extension-config/London-ext_config.ini
+++ b/extension-config/London-ext_config.ini
@@ -1,3 +1,6 @@
+;WIP
+;https://mega.nz/file/m0AxgaCY#LP8DR-sPy8AlNz-tXlJxpfFpJFtYcp-d4N1gADu1Snk (Download link for London Street Circuit
+
 [INCLUDE]
 INCLUDE=common/conditions.ini, common/materials_track.ini, common/grass_fx.ini, common/custom_emissive.ini
 
