--- a/extension-config/London-ext_config.ini
+++ b/extension-config/London-ext_config.ini
@@ -1,8 +1,8 @@
-;WIP, I was an idiot. I should use [LIGHT_SERIES_n] and [LIGHT_SERIES_. . .] fuck
-;https://mega.nz/file/m0AxgaCY#LP8DR-sPy8AlNz-tXlJxpfFpJFtYcp-d4N1gADu1Snk (Download link for London Street Circuit
+[ABOUT]
+AUTHOR=ray
 
 [INCLUDE]
-INCLUDE=common/conditions.ini, common/materials_track.ini, common/grass_fx.ini, common/custom_emissive.ini
+INCLUDE=common/conditions.ini, common/materials_track.ini, common/grass_fx.ini
 
 ;;;;;;;;;;;;;;;etc.;;;;;;;;;;;;;;;
 
@@ -53,9 +53,9 @@ SMOG_EVENING = 0.15
 
 ;;;;;;;;;;;;;;;LIGHTS;;;;;;;;;;;;;;;
 
-[LIGHTING]
-SPECULAR_MULT=1
-LIT_MULT=1
+[BOUNCED_LIGHT]
+SUPPORTED=1
+SURFACE_MATERIALS=ROAD017,WATER
 
 [LIGHT_POLLUTION]
 ACTIVE = 1
@@ -64,14 +64,172 @@ DENSITY = 0.2
 RADIUS_KM = 2
 
 [LIGHTING]
-LIT_MULT = 1.0
+LIT_MULT=1.0
 SPECULAR_MULT = 1.0
-CAR_LIGHTS_LIT_MULT = 1.0
+CAR_LIGHTS_LIT_MULT=1.0
+
+[LIGHT_SERIES_...]
+ACTIVE=1
+VISIBILITY_LEVEL=0
+DESCRIPTION=FCUK
+MESHES=lc_11_albion_loda_001
+OFFSET=0,11.5,0
+DIRECTION=0,-1,0
+SPOT=180
+SPOT_SHARPNESS=1
+RANGE=21
+RANGE_GRADIENT_OFFSET=0.5
+FADE_AT=1000
+FADE_SMOOTH=75
+DIFFUSE_CONCENTRATION=0.5
+CLUSTER_THRESHOLD=11
+COLOR=1,0.85,0.75,75
+COLOR_OFF=0
+CONDITION=NIGHT_SMOOTH
+
+[LIGHT_SERIES_...]
+ACTIVE=1
+VISIBILITY_LEVEL=0
+DESCRIPTION=KONG
+MESHES=lc_imax_loda_001
+OFFSET=0,15,0
+DIRECTION=0,-1,0
+SPOT=180
+SPOT_SHARPNESS=0.75
+RANGE=20
+RANGE_GRADIENT_OFFSET=0.45
+FADE_AT=5000
+FADE_SMOOTH=75
+DIFFUSE_CONCENTRATION=0.5
+CLUSTER_THRESHOLD=11
+COLOR=1,0.65,0.25,100
+COLOR_OFF=0
+CONDITION=NIGHT_SMOOTH
+
+[LIGHT_SERIES_0]
+DESCRIPTION = Single lampost
+ACTIVE = 1
+MATERIALS =LC_7_LAMPOST
+DIRECTION = 0,-1,0
+OFFSET = 0,1,0
+RANGE = 90
+SPOT = 120
+SPOT_SHARPNESS = 0.7
+RANGE_GRADIENT_OFFSET = 0.65
+CLUSTER_THRESHOLD = 11
+FADE_AT = 900
+FADE_SMOOTH=95
+RANGE_GRADIENT_OFFSET=2
+DIFFUSE_CONCENTRATION=1.2
+VISIBILITY_LEVEL=2
+COLOR = 255, 155, 45, 0.075
+SINGLE_FREQUENCY = 1
+CONDITION=NIGHT_SMOOTH
+
+[LIGHT_SERIES_1]
+DESCRIPTION = Round lampost
+ACTIVE = 1
+MATERIALS =LC_3_HIGH_ROUND_HEADED_LAMP
+DIRECTION = 0,-1,0
+OFFSET = 0,1,0
+RANGE = 90
+SPOT = 145
+SPOT_SHARPNESS = 0.7
+RANGE_GRADIENT_OFFSET = 0.65
+CLUSTER_THRESHOLD = 11
+FADE_AT = 900
+FADE_SMOOTH=95
+RANGE_GRADIENT_OFFSET=2
+DIFFUSE_CONCENTRATION=1.2
+VISIBILITY_LEVEL=2
+COLOR = 195, 200, 235, 0.08
+SINGLE_FREQUENCY = 1
+CONDITION=NIGHT_SMOOTH
+
+[LIGHT_SERIES_2]
+DESCRIPTION = Billboard
+ACTIVE = 1
+MATERIALS =DYNAD_FRAMES01_1
+DIRECTION = 0,-1,0
+OFFSET = 0,-1,0.5
+RANGE = 90
+SPOT = 90
+SPOT_SHARPNESS = 0.057
+RANGE_GRADIENT_OFFSET = 0.65
+CLUSTER_THRESHOLD = 11
+FADE_AT = 900
+FADE_SMOOTH=95
+RANGE_GRADIENT_OFFSET=2
+DIFFUSE_CONCENTRATION=1.2
+VISIBILITY_LEVEL=2
+COLOR = 255, 255, 255, 0.025
+SINGLE_FREQUENCY = 1
+CONDITION=NIGHT_SMOOTH
+
+[LIGHT_SERIES_3]
+DESCRIPTION = Bent lampost
+ACTIVE = 1
+MATERIALS =LC_7_HIGH_BENDED_LAMPOST
+DIRECTION = 0,-1,0
+OFFSET = 0,1,0
+RANGE = 85
+SPOT = 180
+SPOT_SHARPNESS = 0.5
+RANGE_GRADIENT_OFFSET = 0.65
+CLUSTER_THRESHOLD = 11
+FADE_AT = 900
+FADE_SMOOTH=95
+RANGE_GRADIENT_OFFSET=0.25
+DIFFUSE_CONCENTRATION=1.25
+VISIBILITY_LEVEL=2
+COLOR = 210, 220, 230, 0.065
+SINGLE_FREQUENCY = 1
+CONDITION=NIGHT_SMOOTH
+
+[LIGHT_SERIES_4]
+DESCRIPTION = High round lampost
+ACTIVE = 1
+MATERIALS =LC_2_HIGH_ROUND_HEADED_LAMP
+DIRECTION = 0,-1,0
+OFFSET = 0,0,0
+RANGE = 90
+SPOT = 120
+SPOT_SHARPNESS = 0.55
+RANGE_GRADIENT_OFFSET = 0.65
+CLUSTER_THRESHOLD = 16
+FADE_AT = 900
+FADE_SMOOTH=95
+RANGE_GRADIENT_OFFSET=2
+DIFFUSE_CONCENTRATION=1.2
+VISIBILITY_LEVEL=2
+COLOR = 255, 255, 255, 0.065
+SINGLE_FREQUENCY = 1
+CONDITION=NIGHT_SMOOTH
+
+[LIGHT_SERIES_5]
+DESCRIPTION = Sphere lamp
+ACTIVE = 1
+MATERIALS =LC_16_SPHERE_LAMP
+DIRECTION = 0,-1,0
+OFFSET = 0,0,0
+RANGE = 90
+SPOT = 180
+SPOT_SHARPNESS = 0.35
+RANGE_GRADIENT_OFFSET = 0.55
+CLUSTER_THRESHOLD = 11
+FADE_AT = 900
+FADE_SMOOTH=95
+RANGE_GRADIENT_OFFSET=1
+DIFFUSE_CONCENTRATION=1.5
+VISIBILITY_LEVEL=2
+COLOR = 255, 185, 25, 0.035
+SINGLE_FREQUENCY = 1
+CONDITION=NIGHT_SMOOTH
 
 ;;;;;;;;;;;;;;;GRASS_FX;;;;;;;;;;;;;;;
 
 [GRASS_FX]
-GRASS_MATERIALS=GRASS1
+GRASS_MATERIALS=GRASS1,IMAX05
 OCCLUDING_MATERIALS=PARKWALL
 MASK_BLUR=1
 SHAPE_SIZE=2
@@ -81,58 +239,92 @@ TRIM_PERIOD=365
 TEXTURE=grass_fx/highlands.dds
 TEXTURE_GRID=10,3
 
-;;;;;;;;;;;;;;;CONDITIONS;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;CONDITION-season;;;;;;;;;;;;;;;
 
-[DEFAULTS]
-NORTH_HEMISPHERE = 1
-SOUTH_HEMISPHERE = 0
-SUMMER_LATITUDE_FACTOR = 0.75
-AUTUMN_LATITUDE_FACTOR = 1.0
-WINTER_LATITUDE_FACTOR = 1.5
-
-[CONDITION_...]
-NAME=SEASON_SUMMER_NORTH
+[CONDITION_0]
+NAME=SEASON_SUMMER
 INPUT=YEAR_PROGRESS
-LUT=(|0=0|0.4=0|0.55=1.0|0.7=0|1=0|)
+LUT=(|-1=0|0=1|0.13=1|0.2=0|0.43=0|0.5=0.8|0.55=1|0.7=1|0.75=0|0.8=0|0.85=1|1=1|)
+# LUT=(|-1=0|0=0|0.1=0|0.23=1|0.35=0|0.48=0|0.6=0.85|0.7=0|0.71=0|0.8=1|0.95=0|1=0|)
 LAG=0
 
-[CONDITION_...]
-NAME=SEASON_AUTUMN_NORTH
+[CONDITION_1]
+NAME=SEASON_WINTER
 INPUT=YEAR_PROGRESS
-LUT=(|0=0|0.6=0|0.75=1.0|0.9=0|1=0|)
+LUT=(|-1=0|0=0.5|0.1=1|0.2=0|0.8=0|0.9=0.35|1=0.5|)
+#LUT=(|-1=0|0=0.65|0.085=1|0.23=0|0.8=0|0.9=0.45|1=0.65|)
 LAG=0
 
-[CONDITION_...]
-NAME=SEASON_WINTER_NORTH
+[CONDITION_2]
+NAME=SEASON_AUTUMN
 INPUT=YEAR_PROGRESS
-LUT=(|0=0.6|0.05=1|0.2=0.0|0.85=0|1=0.6|)
+LUT=(|-1=0|0=1|0.2=0|0.45=0|0.6=0.25|0.7=0|0.75=0|0.8=1|1=1|)
 LAG=0
 
-[MATERIAL_ADJUSTMENT_...]
-ACTIVE=$NORTH_HEMISPHERE
-DESCRIPTION=Summer Settings
-MESHES = LB
+[MATERIAL_ADJUSTMENT_0]
+ACTIVE=1
+DESCRIPTION=The tress
+MATERIALS=Tree,Deciduous1,Y6
 KEY_0=seasonSummer
-VALUE_0=$SUMMER_LATITUDE_FACTOR
-OFF_VALUE_0=ORIGINAL
-CONDITION=SEASON_SUMMER_NORTH
+VALUE_0=0.35
+KEY_1=ksAmbient
+VALUE_1=0.20
+VALUE_1_OFF=ORIGINAL
+KEY_2=ksDiffuse
+VALUE_2=0.22
+VALUE_2_OFF=ORIGINAL
+CONDITION=SEASON_SUMMER
 
-[MATERIAL_ADJUSTMENT_...]
-ACTIVE=$NORTH_HEMISPHERE
-DESCRIPTION=Autumn Settings
-MESHES = LB
+[MATERIAL_ADJUSTMENT_1]
+ACTIVE=1
+VISIBILITY_LEVEL=0
+DESCRIPTION=summer settings for road + kerbs + some walls
+MATERIALS=ROAD017,RMBLE35,RMBL_ROADCURB,RMBL_ROADCURB1,GEN_CONCRETEBARRIER03
+KEY_0=seasonSummer
+VALUE_0=0.35
+KEY_1=ksAmbient
+VALUE_1=0.25
+VALUE_1_OFF=ORIGINAL
+KEY_2=ksDiffuse
+VALUE_2=0.3
+VALUE_2_OFF=ORIGINAL
+CONDITION=SEASON_SUMMER
+
+[MATERIAL_ADJUSTMENT_2]
+ACTIVE=1
+DESCRIPTION=The trees and grass
+MATERIALS=Tree,Deciduous1,Y6,GRASS1
 KEY_0=seasonAutumn
-VALUE_0=$AUTUMN_LATITUDE_FACTOR
+VALUE_0=0.20
 OFF_VALUE_0=ORIGINAL
-CONDITION=SEASON_AUTUMN_NORTH
+CONDITION=SEASON_AUTUMN
 
-[MATERIAL_ADJUSTMENT_...]
-ACTIVE=$NORTH_HEMISPHERE
-DESCRIPTION=Winter Settings
-MATERIALS=?
+[MATERIAL_ADJUSTMENT_3]
+ACTIVE=1
+MATERIALS=Tree,Deciduous1,Y6,GRASS1
+CONDITION=SEASON_WINTER
 KEY_0=seasonWinter
-VALUE_0=$WINTER_LATITUDE_FACTOR
+VALUE_0=1.2
+OFF_VALUE_0=ORIGINAL
+KEY_1=boh
+VALUE_1=0.9
+OFF_VALUE_1=ORIGINAL
+DESCRIPTION=The trees, of course, grass
+
+[MATERIAL_ADJUSTMENT_4]
+ACTIVE=1
+MATERIALS=ROAD017,RMBLE35,RMBL_ROADCURB,RMBL_ROADCURB1,GEN_CONCRETEBARRIER03
+CONDITION=SEASON_WINTER
+KEY_0=seasonWinter
+VALUE_0=1.1
 OFF_VALUE_0=0
+KEY_1=ksDiffuse
+VALUE_1=0.2
+OFF_VALUE_1=ORIGINAL
+KEY_2=ksAmbient
+VALUE_2=0.225
+OFF_VALUE_2=ORIGINAL
+DESCRIPTION=For raods, kerbs and wall
 
 ;;;;;;;;;;;;;;;RAIN_FX;;;;;;;;;;;;;;;
 
