--- a/ppfilters/DMA_warm.ini
+++ b/ppfilters/DMA_warm.ini
@@ -1,12 +1,13 @@
 [ABOUT]
 AUTHOR=ray
-;version v1b
-;some minor tweaks to the godrays colour, DOF a bit smoother and better glare
+CSP_EDITOR=2053
+NOTES=Smoother DOF/bokeh in narrow FOV. God Rays is changed completely new, added lens spot
+VERSION=v2b
 
 [AIRYDISC]
 AIRY_DISC_DISPERSION_ENABLED=1
-ENABLED=1 ;idk what this thing do
-WAVELENGTH=499
+ENABLED=1
+WAVELENGTH=499.000000
 
 [ANTIALIAS]
 ENABLED=1
@@ -14,69 +15,81 @@ END_DISTANCE=1000
 START_DISTANCE=0.0001
 
 [AUTO_EXPOSURE]
-DELAY=0
+DELAY=0.000000
 ENABLED=1
 INFLUENCED_BY_GLARE=1
-MAX=0.5
+MAX=0.400000
 METERING_HEIGHT=100
 METERING_OFFSET_X=0
 METERING_OFFSET_Y=0
 METERING_WIDTH=100
-MIN=0.005
-TARGET=0.3
+MIN=0.050000
+TARGET=0.200000
 
 [CHROMATIC_ABERRATION]
 ENABLED=0
+LATERAL_DISPERSION=0.020000,0.000000
 SAMPLES=5
-LATERAL_DISPERSION=0.005,0.005
-UNIFORM_DISPERSION=0.005,0.005
+UNIFORM_DISPERSION=0.019100,0.011800
 
 [COLOR]
-BRIGHTNESS=0.95
+BRIGHTNESS=0.900000
 COLOR_TEMP=6000
 CONTRAST=1.025
-HUE=0
-SATURATION=1.3
-SEPIA=0.2
-WHITE_BALANCE=6200
+HUE=0.000000
+SATURATION=1.300000
+SEPIA=0.250000
+WHITE_BALANCE=6900
 
 [DIAPHRAGM]
 ROTATE_OFFSET=10
-ROTATE_SCALE=0
+ROTATE_SCALE=0.000000
 TYPE=2
 
 [DOF]
-ADAPTIVE_APERTURE_FACTOR=1
+ADAPTIVE_APERTURE_FACTOR=0.400000
 APERTURE_BACK_LEVELS_NUMBER=-1
-APERTURE_FRONT_LEVELS_NUMBER=2
-APERTURE_F_NUMBER=16
+APERTURE_FRONT_LEVELS_NUMBER=-1
+APERTURE_F_NUMBER=16.000000
 APERTURE_PARAMETER=2
 APERTURE_SHAPE=1
-BACKGROUND_MASK_THRESHOLD=0.3
-BASE_FOV=45
-EDGE_QUALITY=3
+BACKGROUND_MASK_THRESHOLD=0.150000
+BASE_FOV=45.000000
+EDGE_QUALITY=2
 ENABLED=1
-IMAGE_SENSOR_HEIGHT=0.24
-QUALITY=6
+IMAGE_SENSOR_HEIGHT=0.150000
+QUALITY=5
+
+[EXT_AE_ADJUSTMENT]
+ADAPTATION_SENSITIVITY=0.100000
+ADAPTATION_SPEED_LIMIT=32.000000
+DARK_ADAPTATION_SENSITIVITY=0.050000
+ENABLED=1
 
 [EXT_AUTO_EXPOSURE]
 METERING_AREA_DEBUG=0
 METERING_AREA_OFFSET=0,0
-METERING_AREA_SIZE=0.75,0.75
+METERING_AREA_SIZE=0.900000,0.900000
 
 [EXT_COLOR_GRADING]
 ENABLED=1
-FILE=\extension\textures\color_grading\NFS2015W.png
+FILE='E:\Games\Assetto Corsa\extension\textures\color_grading\Neutral.png'
 STRENGTH=1
 
+[EXT_DXGI_HDR]
+SUPPORTED=0
+
 [EXT_GLARE]
-ANAMORPHIC_COLOR_0=1,1,1,1
-ANAMORPHIC_COLOR_1=1,1,1,1
-ANAMORPHIC_PARAM_0=0.0008
-ANAMORPHIC_PARAM_1=0
+ANAMORPHIC_COLOR_0=0.999954,1.000000,0.999900,1.000000
+ANAMORPHIC_COLOR_1=0.999994,1.000000,0.999990,1.000000
+ANAMORPHIC_PARAM_0=0.000000
+ANAMORPHIC_PARAM_1=0.000000
+
+[EXT_GLARE_FIRSTPERSON_SHAPE]
+ENABLED=0
 
 [EXT_HDR]
-FILMIC_CONTRAST=1
+FILMIC_CONTRAST=0.850000
 
 [FEEDBACK]
 ASPECT_RATIO=0
@@ -86,61 +99,61 @@ TIME=0.1
 WEIGHT=0.05
 
 [GLARE]
-ENABLED=1
-QUALITY=5
-GHOST=1
 AFTER_IMAGE=0
-PRECISION=0
 ANAMORPHIC=1
-LUMINANCE=3
-SHAPE=1
-BLUR=1
-THRESHOLD=12
+BLOOM_FILTER_THRESHOLD=0.001000
+BLOOM_GAUSSIAN_RADIUS_SCALE=2.000000
+BLOOM_LUMINANCE_GAMMA=4.000000
+BLOOM_NUM_LEVELS=6
+BLUR=1.000000
 BRIGHT_PASS=1
-BLOOM_FILTER_THRESHOLD=0.002
-BLOOM_GAUSSIAN_RADIUS_SCALE=95
-BLOOM_LUMINANCE_GAMMA=1.5
-BLOOM_NUM_LEVELS=1
-GENERATION_RANGE_SCALE=1
-STAR_FILTER_THRESHOLD=0.0002
-STAR_SOFTNESS=0.5
-STAR_LENGTH_FOV_DEPENDENCE=0
+ENABLED=1
+GENERATION_RANGE_SCALE=1.000000
+GHOST=1
 GHOST_CONCENTRIC_DISTORTION=1.0
-USE_CUSTOM_SHAPE=1
-SHAPE_LUMINANCE=1.75
-SHAPE_BLOOM_LUMINANCE=0.04
+LUMINANCE=1.000000
+PRECISION=0
+QUALITY=5
+SHAPE=4
+SHAPE_AFTERIMAGE_LENGTH=0.5
+SHAPE_AFTERIMAGE_LUMINANCE=80
 SHAPE_BLOOM_DISPERSION=0.002
 SHAPE_BLOOM_DISPERSION_BASE_LEVEL=2
-SHAPE_GHOST_LUMINANCE=0.15
-SHAPE_GHOST_HALO_LUMINANCE=0.005
+SHAPE_BLOOM_LUMINANCE=0.04
 SHAPE_GHOST_DISTORTION=0
-SHAPE_GHOST_SHARPENESS=0 ; 1 or 0
-SHAPE_STAR_LUMINANCE=0.045
-SHAPE_STAR_STREAKS_NUMBER=6
-SHAPE_STAR_LENGTH=0.2
-SHAPE_STAR_SECONDARY_LENGTH=1
-SHAPE_STAR_ROTATION=1 ;1 or 0
-SHAPE_STAR_INCLINATION_ANGLE=3
+SHAPE_GHOST_HALO_LUMINANCE=0.005
+SHAPE_GHOST_LUMINANCE=0.15
+SHAPE_GHOST_SHARPENESS=0
+SHAPE_LUMINANCE=1.75
 SHAPE_STAR_DISPERSION=0
 SHAPE_STAR_FORCE_DISPERSION=0
-SHAPE_AFTERIMAGE_LUMINANCE=80
-SHAPE_AFTERIMAGE_LENGTH=0.5
+SHAPE_STAR_INCLINATION_ANGLE=3
+SHAPE_STAR_LENGTH=0.2
+SHAPE_STAR_LUMINANCE=0.045
+SHAPE_STAR_ROTATION=1
+SHAPE_STAR_SECONDARY_LENGTH=1
+SHAPE_STAR_STREAKS_NUMBER=6
+STAR_FILTER_THRESHOLD=0.0002
+STAR_LENGTH_FOV_DEPENDENCE=0.000000
+STAR_SOFTNESS=0.5
+THRESHOLD=9.000000
+USE_CUSTOM_SHAPE=1
 
 [GODRAYS]
+ANGLE_ATTENUATION=15.000000
+COLOR=1.000000,0.866744,0.364761,1.000000
+DEPTH_MASK_THRESHOLD=0.995510
+DIFFRACTION_RING=0.200000
+DIFFRACTION_RING_ATTENUATION=0.200000
+DIFFRACTION_RING_OUTER_COLOR=0.804737,1.000000,0.525061,1.000000
+DIFFRACTION_RING_RADIUS=2.100000
+DIFFRACTION_RING_SPECTRUM_ORDER=0.100000
 ENABLED=1
+GLARE_RATIO=0.001250
+LENGTH=10.000000
+NOISE_FREQUENCY=2.400000
+NOISE_MASK=1.600000
 USE_SUN_LIGHT=1
-DIFFRACTION_RING=0.15
-DIFFRACTION_RING_RADIUS=8
-DIFFRACTION_RING_ATTENUATION=0.2
-DIFFRACTION_RING_SPECTRUM_ORDER=1
-DIFFRACTION_RING_OUTER_COLOR=1,1.2,0.8,1
-COLOR=1,1,1,1
-LENGTH=18.0
-GLARE_RATIO=0.0035
-ANGLE_ATTENUATION=15
-NOISE_MASK=0.008
-NOISE_FREQUENCY=1
-DEPTH_MASK_THRESHOLD=1
 
 [HEAT_SHIMMER]
 ENABLED=1
@@ -165,14 +178,14 @@ ROUNDNESS=0.05
 SMOOTHNESS=1.0
 
 [OPTIMIZATIONS]
-FIXED_WIDTH=1280
+FIXED_WIDTH=0
 
 [TONEMAPPING]
-EXPOSURE=0 ;doesn't work if you have auto exposure so this is trash
-FUNCTION=-1
+EXPOSURE=0.050000
+FUNCTION=2
 GAMMA=1.4
 HDR=1
-MAPPING_FACTOR=32
+MAPPING_FACTOR=32.000000
 OFFSET_X=0
 OFFSET_Y=0
 SCALE_HEIGHT=1
@@ -182,7 +195,7 @@ SCALE_WIDTH=1
 APERTURE_RESULT_BLUR_MOD=1
 
 [VIGNETTING]
-FOV_DEPENDENCE=0
+FOV_DEPENDENCE=0.000000
 STRENGTH=0.4
 
 [YEBIS]
