--- a/extension-config/London-ext_config.ini
+++ b/extension-config/London-ext_config.ini
@@ -1,5 +1,6 @@
 [ABOUT]
 AUTHOR=ray
+LIGHTS_COUNT=many
 
 [INCLUDE]
 INCLUDE=common/conditions.ini, common/materials_track.ini, common/grass_fx.ini
@@ -9,7 +10,6 @@ INCLUDE=common/conditions.ini, common/materials_track.ini, common/grass_fx.ini
 [BASIC]
 USE_WINTER_DIRT_COLOR=1
 SUPPORTS_WIND=1
-IGNORE_OTHER_CONFIGS = 1
 
 [WIND]
 DYNAMIC_FLAGS=AUTO
@@ -17,11 +17,10 @@ DYNAMIC_FLAGS_TESSELLATION = 0
 
 [Material_Water]
 Materials = WATER
-UseAlphaFromNormal=1
-UseRecommendedTextures=0
-UseRecommendedDetailTexture=1
-UseNormalMapTwice=1
 Type=POND
+BLEND_MODE=OPAQUE
+RainOffset=-1
+IS_TRANSPARENT=0
 
 [DISTANT_GLOW]
 THRESHOLD = 25
@@ -32,9 +31,9 @@ HORIZON_OFFSET = 0.0
 DOME_SIZE = 24000
 SUN_DAWN = 1
 SUN_DUSK = 1
-FOG_LEVEL = 0.90
+FOG_LEVEL = 0.75
 FOG_BLEND = 1.15
-FOG_DISTANCE = 0.9
+FOG_DISTANCE = 1
 SMOG_MORNING = 0.05
 SMOG_NOON = 0.1
 SMOG_EVENING = 0.15
@@ -47,21 +46,23 @@ HORIZON_OFFSET = 0.0
 [BOUNCED_LIGHT]
 SUPPORTED=1
 SURFACE_MATERIALS=ROAD017,WATER
+CAUSTICS=1
 
 [LIGHT_POLLUTION]
 ACTIVE = 1
-COLOR = 1, 1, 1
-DENSITY = 0.2
-RADIUS_KM = 2
+COLOR = 1, 0.85, 0.55
+DENSITY = 0.451
+RADIUS_KM=2
 
 [LIGHTING]
-LIT_MULT=1.0
+LIT_MULT=1.1
 SPECULAR_MULT = 1.0
-CAR_LIGHTS_LIT_MULT=1.0
+CAR_LIGHTS_LIT_MULT=1.2
 
 [LIGHT_SERIES_...]
 ACTIVE=1
 VISIBILITY_LEVEL=0
+VOLUMETRIC_LIGHT=0
 DESCRIPTION=FCUK
 MESHES=lc_11_albion_loda_001
 OFFSET=0,11.5,0
@@ -70,32 +71,33 @@ SPOT=180
 SPOT_SHARPNESS=1
 RANGE=21
 RANGE_GRADIENT_OFFSET=0.5
-FADE_AT=1000
+FADE_AT=450
 FADE_SMOOTH=75
 DIFFUSE_CONCENTRATION=0.5
 CLUSTER_THRESHOLD=11
-COLOR=1,0.85,0.75,75
+COLOR=1,0.85,0.75,65
 COLOR_OFF=0
 CONDITION=NIGHT_SMOOTH
 
 [LIGHT_SERIES_...]
 ACTIVE=1
 VISIBILITY_LEVEL=0
-DESCRIPTION=KONG
+VOLUMETRIC_LIGHT=0
+DESCRIPTION=Circular AD
 MESHES=lc_imax_loda_001
-OFFSET=0,15,0
+OFFSET=0,20,0
 DIRECTION=0,-1,0
 SPOT=180
-SPOT_SHARPNESS=0.75
+SPOT_SHARPNESS=0.6
 RANGE=20
-RANGE_GRADIENT_OFFSET=0.45
-FADE_AT=5000
+RANGE_GRADIENT_OFFSET=0.35
+FADE_AT=300
 FADE_SMOOTH=75
-DIFFUSE_CONCENTRATION=0.5
-CLUSTER_THRESHOLD=11
-COLOR=1,0.65,0.25,100
+DIFFUSE_CONCENTRATION=0.65
+CLUSTER_THRESHOLD=0
+COLOR=1,0.8,0.55,18
 COLOR_OFF=0
-CONDITION=NIGHT_SMOOTH
+CONDITION=SMOOTH_SUN_B
 
 [LIGHT_SERIES_0]
 DESCRIPTION = Single lampost
@@ -108,12 +110,12 @@ SPOT = 120
 SPOT_SHARPNESS = 0.7
 RANGE_GRADIENT_OFFSET = 0.65
 CLUSTER_THRESHOLD = 11
-FADE_AT = 900
+FADE_AT = 500
 FADE_SMOOTH=95
 RANGE_GRADIENT_OFFSET=2
 DIFFUSE_CONCENTRATION=1.2
 VISIBILITY_LEVEL=2
-COLOR = 255, 155, 45, 0.075
+COLOR = 255, 155, 45, 0.09
 SINGLE_FREQUENCY = 1
 CONDITION=NIGHT_SMOOTH
 
@@ -128,12 +130,12 @@ SPOT = 145
 SPOT_SHARPNESS = 0.7
 RANGE_GRADIENT_OFFSET = 0.65
 CLUSTER_THRESHOLD = 11
-FADE_AT = 900
+FADE_AT =450
 FADE_SMOOTH=95
 RANGE_GRADIENT_OFFSET=2
 DIFFUSE_CONCENTRATION=1.2
 VISIBILITY_LEVEL=2
-COLOR = 195, 200, 235, 0.08
+COLOR = 195, 200, 235, 0.085
 SINGLE_FREQUENCY = 1
 CONDITION=NIGHT_SMOOTH
 
@@ -148,12 +150,12 @@ SPOT = 90
 SPOT_SHARPNESS = 0.057
 RANGE_GRADIENT_OFFSET = 0.65
 CLUSTER_THRESHOLD = 11
-FADE_AT = 900
+FADE_AT = 250
 FADE_SMOOTH=95
 RANGE_GRADIENT_OFFSET=2
 DIFFUSE_CONCENTRATION=1.2
 VISIBILITY_LEVEL=2
-COLOR = 255, 255, 255, 0.025
+COLOR = 255, 255, 255, 0.03
 SINGLE_FREQUENCY = 1
 CONDITION=NIGHT_SMOOTH
 
@@ -168,12 +170,12 @@ SPOT = 180
 SPOT_SHARPNESS = 0.5
 RANGE_GRADIENT_OFFSET = 0.65
 CLUSTER_THRESHOLD = 11
-FADE_AT = 900
+FADE_AT = 500
 FADE_SMOOTH=95
 RANGE_GRADIENT_OFFSET=0.25
 DIFFUSE_CONCENTRATION=1.25
 VISIBILITY_LEVEL=2
-COLOR = 210, 220, 230, 0.065
+COLOR = 210, 220, 230, 0.07
 SINGLE_FREQUENCY = 1
 CONDITION=NIGHT_SMOOTH
 
@@ -188,12 +190,12 @@ SPOT = 120
 SPOT_SHARPNESS = 0.55
 RANGE_GRADIENT_OFFSET = 0.65
 CLUSTER_THRESHOLD = 16
-FADE_AT = 900
+FADE_AT = 450
 FADE_SMOOTH=95
 RANGE_GRADIENT_OFFSET=2
 DIFFUSE_CONCENTRATION=1.2
 VISIBILITY_LEVEL=2
-COLOR = 255, 255, 255, 0.065
+COLOR = 255, 255, 255, 0.06
 SINGLE_FREQUENCY = 1
 CONDITION=NIGHT_SMOOTH
 
@@ -208,7 +210,7 @@ SPOT = 180
 SPOT_SHARPNESS = 0.35
 RANGE_GRADIENT_OFFSET = 0.55
 CLUSTER_THRESHOLD = 11
-FADE_AT = 900
+FADE_AT = 300
 FADE_SMOOTH=95
 RANGE_GRADIENT_OFFSET=1
 DIFFUSE_CONCENTRATION=1.5
@@ -221,22 +223,21 @@ CONDITION=NIGHT_SMOOTH
 
 [GRASS_FX]
 GRASS_MATERIALS=GRASS1,IMAX05
-OCCLUDING_MATERIALS=PARKWALL
 MASK_BLUR=1
-SHAPE_SIZE=2
-SHAPE_TIDY=2
+SHAPE_SIZE=1
+SHAPE_TIDY=1
 SHAKE_CUT=0
+SHAPE_WIDTH=0.82
 TRIM_PERIOD=365
 TEXTURE=grass_fx/highlands.dds
-TEXTURE_GRID=10,3
+TEXTURE_GRID=8,3
 
-;;;;;;;;;;;;;;;CONDITION-season;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;CONDITION;;;;;;;;;;;;;;;
 
 [CONDITION_0]
 NAME=SEASON_SUMMER
 INPUT=YEAR_PROGRESS
 LUT=(|-1=0|0=1|0.13=1|0.2=0|0.43=0|0.5=0.8|0.55=1|0.7=1|0.75=0|0.8=0|0.85=1|1=1|)
-# LUT=(|-1=0|0=0|0.1=0|0.23=1|0.35=0|0.48=0|0.6=0.85|0.7=0|0.71=0|0.8=1|0.95=0|1=0|)
 LAG=0
 
 [CONDITION_1]
@@ -249,20 +250,20 @@ LAG=0
 [CONDITION_2]
 NAME=SEASON_AUTUMN
 INPUT=YEAR_PROGRESS
-LUT=(|-1=0|0=1|0.2=0|0.45=0|0.6=0.25|0.7=0|0.75=0|0.8=1|1=1|)
+LUT=(|-1=0|0=1|0.2=0|0.45=0|0.6=0.25|0.65=0.5|0.7=0.75|0.75=1|0.9=0.0|1=0|)
 LAG=0
 
 [MATERIAL_ADJUSTMENT_0]
 ACTIVE=1
-DESCRIPTION=The tress
-MATERIALS=Tree,Deciduous1,Y6
+DESCRIPTION=The tress and grass
+MATERIALS=Tree,Deciduous1,Y6,IMAX05,GRASS1,ATLAS_TREEWALLS
 KEY_0=seasonSummer
-VALUE_0=0.35
+VALUE_0=0.75
 KEY_1=ksAmbient
-VALUE_1=0.20
+VALUE_1=0.25
 VALUE_1_OFF=ORIGINAL
 KEY_2=ksDiffuse
-VALUE_2=0.22
+VALUE_2=0.05
 VALUE_2_OFF=ORIGINAL
 CONDITION=SEASON_SUMMER
 
@@ -272,7 +273,7 @@ VISIBILITY_LEVEL=0
 DESCRIPTION=summer settings for road + kerbs + some walls
 MATERIALS=ROAD017,RMBLE35,RMBL_ROADCURB,RMBL_ROADCURB1,GEN_CONCRETEBARRIER03
 KEY_0=seasonSummer
-VALUE_0=0.35
+VALUE_0=0.5
 KEY_1=ksAmbient
 VALUE_1=0.25
 VALUE_1_OFF=ORIGINAL
@@ -284,18 +285,24 @@ CONDITION=SEASON_SUMMER
 [MATERIAL_ADJUSTMENT_2]
 ACTIVE=1
 DESCRIPTION=The trees and grass
-MATERIALS=Tree,Deciduous1,Y6,GRASS1
+MATERIALS=Tree,Deciduous1,Y6,GRASS1,IMAX05,ATLAS_TREEWALLS
 KEY_0=seasonAutumn
-VALUE_0=0.20
+VALUE_0=0.8
 OFF_VALUE_0=ORIGINAL
+KEY_1=ksAmbient
+VALUE_1=0.4
+VALUE_1_OFF=ORIGINAL
+KEY_2=ksDiffuse
+VALUE_2=0.3
+VALUE_2_OFF=ORIGINAL
 CONDITION=SEASON_AUTUMN
 
 [MATERIAL_ADJUSTMENT_3]
 ACTIVE=1
-MATERIALS=Tree,Deciduous1,Y6,GRASS1
+MATERIALS=Tree,Deciduous1,Y6,GRASS1,IMAX05,ATLAS_TREEWALLS
 CONDITION=SEASON_WINTER
 KEY_0=seasonWinter
-VALUE_0=1.2
+VALUE_0=1
 OFF_VALUE_0=ORIGINAL
 KEY_1=boh
 VALUE_1=0.9
@@ -307,15 +314,25 @@ ACTIVE=1
 MATERIALS=ROAD017,RMBLE35,RMBL_ROADCURB,RMBL_ROADCURB1,GEN_CONCRETEBARRIER03
 CONDITION=SEASON_WINTER
 KEY_0=seasonWinter
-VALUE_0=1.1
+VALUE_0=1
 OFF_VALUE_0=0
 KEY_1=ksDiffuse
-VALUE_1=0.2
+VALUE_1=0.1
 OFF_VALUE_1=ORIGINAL
 KEY_2=ksAmbient
-VALUE_2=0.225
+VALUE_2=0.215
 OFF_VALUE_2=ORIGINAL
 DESCRIPTION=For raods, kerbs and wall
+
+[MATERIAL_ADJUSTMENT_5]
+ACTIVE=1
+VISIBILITY_LEVE=0
+DESCRIPTION=Circular AD
+MATERIALS=IMAX06AD
+KEY_0=ksEmissive
+VALUE_0=255,200,120,0.55
+VALUE_0_OFF=ORIGINAL
+CONDITION=NIGHT_SMOOTH
 
 ;;;;;;;;;;;;;;;RAIN_FX;;;;;;;;;;;;;;;
 
@@ -326,3 +343,17 @@ SMOOTH_MATERIALS =HEDGE,SKIDM
 ROUGH_MATERIALS =RMBLE74,ROAD024C,ROADPAVEKERB,EVENT_BRIDGE01_ORG00_B,RMBLE74,RMBLE35
 LINES_MATERIALS =ROAD016,ROADEDGE3,ROADEDGE,ROADEDGE4,ROAD018
 LINES_FILTER_MATERIALS =ROAD016,ROADEDGE3,ROADEDGE,ROADEDGE4,ROAD018
+
+[TRACK_OCCLUDER_BOX_0]
+DESCRIPTION=Wide bridge
+POINT_0=-321.17, -0.31, -345.16
+POINT_1=-305.99, -0.763, -373.77
+POINT_2=-291.34, -0.638, -364.68
+POINT_3=-305.16, -0.198, -336.28
+
+[TRACK_OCCLUDER_BOX_1]
+DESCRIPTION=Small bridge
+POINT_0=-245.61, 1.69, -95.56
+POINT_1=228.97, 1.57, -103.83
+POINT_2=213.57, 1.06, -86.75
+POINT_3=228.58, 0.886, -79.87
