--- a/ppfilters/DMA_warm.ini
+++ b/ppfilters/DMA_warm.ini
@@ -1,8 +1,8 @@
 [ABOUT]
 AUTHOR=ray
 CSP_EDITOR=2053
-NOTES=Smoother DOF/bokeh in narrow FOV. God Rays is changed completely new, added lens spot
-VERSION=v2b
+NOTES=DOF made stronger at far FOV,reduced glare light
+VERSION=v2bA
 
 [AIRYDISC]
 AIRY_DISC_DISPERSION_ENABLED=1
@@ -18,13 +18,13 @@ START_DISTANCE=0.0001
 DELAY=0.000000
 ENABLED=1
 INFLUENCED_BY_GLARE=1
-MAX=0.400000
+MAX=0.300000
 METERING_HEIGHT=100
 METERING_OFFSET_X=0
 METERING_OFFSET_Y=0
 METERING_WIDTH=100
-MIN=0.050000
-TARGET=0.200000
+MIN=0.010000
+TARGET=0.150000
 
 [CHROMATIC_ABERRATION]
 ENABLED=0
@@ -47,21 +47,21 @@ ROTATE_SCALE=0.000000
 TYPE=2
 
 [DOF]
-ADAPTIVE_APERTURE_FACTOR=0.400000
+ADAPTIVE_APERTURE_FACTOR=0.000000
 APERTURE_BACK_LEVELS_NUMBER=-1
 APERTURE_FRONT_LEVELS_NUMBER=-1
 APERTURE_F_NUMBER=16.000000
 APERTURE_PARAMETER=2
-APERTURE_SHAPE=1
+APERTURE_SHAPE=5
 BACKGROUND_MASK_THRESHOLD=0.150000
-BASE_FOV=45.000000
+BASE_FOV=35.000000
 EDGE_QUALITY=2
 ENABLED=1
-IMAGE_SENSOR_HEIGHT=0.150000
+IMAGE_SENSOR_HEIGHT=0.300000
 QUALITY=5
 
 [EXT_AE_ADJUSTMENT]
-ADAPTATION_SENSITIVITY=0.100000
+ADAPTATION_SENSITIVITY=0.250000
 ADAPTATION_SPEED_LIMIT=32.000000
 DARK_ADAPTATION_SENSITIVITY=0.050000
 ENABLED=1
@@ -102,8 +102,8 @@ WEIGHT=0.05
 AFTER_IMAGE=0
 ANAMORPHIC=1
 BLOOM_FILTER_THRESHOLD=0.001000
-BLOOM_GAUSSIAN_RADIUS_SCALE=2.000000
-BLOOM_LUMINANCE_GAMMA=4.000000
+BLOOM_GAUSSIAN_RADIUS_SCALE=1.350000
+BLOOM_LUMINANCE_GAMMA=2.900000
 BLOOM_NUM_LEVELS=6
 BLUR=1.000000
 BRIGHT_PASS=1
@@ -111,32 +111,32 @@ ENABLED=1
 GENERATION_RANGE_SCALE=1.000000
 GHOST=1
 GHOST_CONCENTRIC_DISTORTION=1.0
-LUMINANCE=1.000000
+LUMINANCE=0.600000
 PRECISION=0
 QUALITY=5
-SHAPE=4
-SHAPE_AFTERIMAGE_LENGTH=0.5
-SHAPE_AFTERIMAGE_LUMINANCE=80
-SHAPE_BLOOM_DISPERSION=0.002
+SHAPE=1
+SHAPE_AFTERIMAGE_LENGTH=0.550000
+SHAPE_AFTERIMAGE_LUMINANCE=3.000000
+SHAPE_BLOOM_DISPERSION=0.000000
 SHAPE_BLOOM_DISPERSION_BASE_LEVEL=2
-SHAPE_BLOOM_LUMINANCE=0.04
-SHAPE_GHOST_DISTORTION=0
+SHAPE_BLOOM_LUMINANCE=0.200000
+SHAPE_GHOST_DISTORTION=0.000000
 SHAPE_GHOST_HALO_LUMINANCE=0.005
-SHAPE_GHOST_LUMINANCE=0.15
+SHAPE_GHOST_LUMINANCE=0.300000
 SHAPE_GHOST_SHARPENESS=0
-SHAPE_LUMINANCE=1.75
-SHAPE_STAR_DISPERSION=0
+SHAPE_LUMINANCE=0.400000
+SHAPE_STAR_DISPERSION=0.000000
 SHAPE_STAR_FORCE_DISPERSION=0
 SHAPE_STAR_INCLINATION_ANGLE=3
-SHAPE_STAR_LENGTH=0.2
-SHAPE_STAR_LUMINANCE=0.045
+SHAPE_STAR_LENGTH=0.200000
+SHAPE_STAR_LUMINANCE=0.080000
 SHAPE_STAR_ROTATION=1
 SHAPE_STAR_SECONDARY_LENGTH=1
 SHAPE_STAR_STREAKS_NUMBER=6
 STAR_FILTER_THRESHOLD=0.0002
 STAR_LENGTH_FOV_DEPENDENCE=0.000000
 STAR_SOFTNESS=0.5
-THRESHOLD=9.000000
+THRESHOLD=10.000000
 USE_CUSTOM_SHAPE=1
 
 [GODRAYS]
