--- a/extension-config/London-ext_config.ini
+++ b/extension-config/London-ext_config.ini
@@ -1,6 +1,7 @@
 [ABOUT]
 AUTHOR=ray
 LIGHTS_COUNT=many
+NOTE=https://www.racedepartment.com/downloads/flying-birds-for-laguna-seca.33407/ (birds)
 
 [INCLUDE]
 INCLUDE=common/conditions.ini, common/materials_track.ini, common/grass_fx.ini
@@ -41,6 +42,18 @@ SMOG_EVENING = 0.15
 [SOL2]
 HORIZON_OFFSET = 0.0
 
+[VAO]
+OPACITY=0.8
+MULTIPLIER=1.0
+
+[SHADER_REPLACEMENT_...]
+MATERIALS=shader:ksTree?
+MATERIAL_FLAG_0=1
+
+[SHADER_REPLACEMENT_...]
+MATERIALS=?
+DOUBLE_FACE_SHADOW_BIASED=1
+
 ;;;;;;;;;;;;;;;LIGHTS;;;;;;;;;;;;;;;
 
 [BOUNCED_LIGHT]
@@ -58,6 +71,26 @@ RADIUS_KM=2
 LIT_MULT=1.1
 SPECULAR_MULT = 1.0
 CAR_LIGHTS_LIT_MULT=1.2
+
+[LIGHT_SERIES_...]
+ACTIVE=1
+VISIBILITY_LEVEL=0
+VOLUMETRIC_LIGHT=0
+DESCRIPTION=NFS Billboard
+MATERIALS=DRIFTVIDEO2
+OFFSET=0,11,0
+DIRECTION=0,-1,0
+SPOT=180
+SPOT_SHARPNESS=1
+RANGE=20
+RANGE_GRADIENT_OFFSET=0.42
+FADE_AT=100
+FADE_SMOOTH=25
+DIFFUSE_CONCENTRATION=0.45
+CLUSTER_THRESHOLD=11
+COLOR=1,1,1,140
+COLOR_OFF=ORIGINAL
+CONDITION=SMOOTH_SUN_B
 
 [LIGHT_SERIES_...]
 ACTIVE=1
@@ -91,8 +124,8 @@ SPOT=180
 SPOT_SHARPNESS=0.6
 RANGE=20
 RANGE_GRADIENT_OFFSET=0.35
-FADE_AT=300
-FADE_SMOOTH=75
+FADE_AT=275
+FADE_SMOOTH=80
 DIFFUSE_CONCENTRATION=0.65
 CLUSTER_THRESHOLD=0
 COLOR=1,0.8,0.55,18
@@ -110,8 +143,8 @@ SPOT = 120
 SPOT_SHARPNESS = 0.7
 RANGE_GRADIENT_OFFSET = 0.65
 CLUSTER_THRESHOLD = 11
-FADE_AT = 500
-FADE_SMOOTH=95
+FADE_AT = 300
+FADE_SMOOTH=85
 RANGE_GRADIENT_OFFSET=2
 DIFFUSE_CONCENTRATION=1.2
 VISIBILITY_LEVEL=2
@@ -234,6 +267,28 @@ TEXTURE_GRID=8,3
 
 ;;;;;;;;;;;;;;;CONDITION;;;;;;;;;;;;;;;
 
+[CONDITION_...]
+NAME=FERRISWHEEL,LONDONEYE01,lc_londoneye_loda_003
+INPUT=ONE
+FLASHING_FREQUENCY=0.4
+FLASHING_SKIP_OFF_STATE=1
+FLASHING_NOISE_AMPLITUDE=0
+FLASHING_MIN_VALUE=0.0
+FLASHING_SYNCED=0
+FLASHING_SKIP_DOWNHILL_STATE=1
+FLASHING_SMOOTHNESS=LINEAR
+FLASHING_LUT=(|0=1,0.9,0|0.1=0,0,0|0.2=1.0,0.1,0.0|0.3=0,0,0|0.4=0.0,1.0,0.0|0.5=0,0,0|0.6=0,0.95,0.95|0.7=0,0,0|0.8=0.4,0.0,1.0|0.9=0,0,0|1.0=0,0.4,1.0|)
+
+[MATERIAL_ADJUSTMENT_...]
+ACTIVE=1
+VISIBILITY_LEVEL=0
+DESCRIPTION=Ferris wheel
+MATERIALS=SUZUKAWHEELLIGHTSEMMISIVE1,LONDONEYE01,LONDONEYE02
+KEY_0=ksEmissive
+VALUE_0=120
+VALUE_0_OFF=0
+CONDITION=FERRISWHEEL
+
 [CONDITION_0]
 NAME=SEASON_SUMMER
 INPUT=YEAR_PROGRESS
@@ -244,7 +299,6 @@ LAG=0
 NAME=SEASON_WINTER
 INPUT=YEAR_PROGRESS
 LUT=(|-1=0|0=0.5|0.1=1|0.2=0|0.8=0|0.9=0.35|1=0.5|)
-#LUT=(|-1=0|0=0.65|0.085=1|0.23=0|0.8=0|0.9=0.45|1=0.65|)
 LAG=0
 
 [CONDITION_2]
@@ -256,7 +310,7 @@ LAG=0
 [MATERIAL_ADJUSTMENT_0]
 ACTIVE=1
 DESCRIPTION=The tress and grass
-MATERIALS=Tree,Deciduous1,Y6,IMAX05,GRASS1,ATLAS_TREEWALLS
+MATERIALS=Tree,Deciduous1,Y6,IMAX05,GRASS1,ATLAS_TREEWALLS,HEDGE
 KEY_0=seasonSummer
 VALUE_0=0.75
 KEY_1=ksAmbient
@@ -285,7 +339,7 @@ CONDITION=SEASON_SUMMER
 [MATERIAL_ADJUSTMENT_2]
 ACTIVE=1
 DESCRIPTION=The trees and grass
-MATERIALS=Tree,Deciduous1,Y6,GRASS1,IMAX05,ATLAS_TREEWALLS
+MATERIALS=Tree,Deciduous1,Y6,GRASS1,IMAX05,ATLAS_TREEWALLS,HEDGE
 KEY_0=seasonAutumn
 VALUE_0=0.8
 OFF_VALUE_0=ORIGINAL
@@ -299,7 +353,7 @@ CONDITION=SEASON_AUTUMN
 
 [MATERIAL_ADJUSTMENT_3]
 ACTIVE=1
-MATERIALS=Tree,Deciduous1,Y6,GRASS1,IMAX05,ATLAS_TREEWALLS
+MATERIALS=Tree,Deciduous1,Y6,GRASS1,IMAX05,ATLAS_TREEWALLS,HEDGE
 CONDITION=SEASON_WINTER
 KEY_0=seasonWinter
 VALUE_0=1
@@ -307,6 +361,8 @@ OFF_VALUE_0=ORIGINAL
 KEY_1=boh
 VALUE_1=0.9
 OFF_VALUE_1=ORIGINAL
+KEY_3=ksEmissive
+VALUE_3=90,90,100,0.18
 DESCRIPTION=The trees, of course, grass
 
 [MATERIAL_ADJUSTMENT_4]
@@ -326,7 +382,7 @@ DESCRIPTION=For raods, kerbs and wall
 
 [MATERIAL_ADJUSTMENT_5]
 ACTIVE=1
-VISIBILITY_LEVE=0
+VISIBILITY_LEVEL=0
 DESCRIPTION=Circular AD
 MATERIALS=IMAX06AD
 KEY_0=ksEmissive
@@ -334,15 +390,24 @@ VALUE_0=255,200,120,0.55
 VALUE_0_OFF=ORIGINAL
 CONDITION=NIGHT_SMOOTH
 
+[MATERIAL_ADJUSTMENT_6]
+ACTIVE=1
+VISIBILITY_LEVEL=0
+DESCRIPTION=Boost brightness
+MATERIALS=?
+KEY_0=ksEmissive
+VALUE_0=255,255,255,0.05
+VALUE_0_OFF=ORIGINAL
+
 ;;;;;;;;;;;;;;;RAIN_FX;;;;;;;;;;;;;;;
 
 [RAIN_FX]
 PUDDLES_MATERIALS =ROADDISTANT2,LON_40_PLAZAD,LON_42_ELIZABETH_HOUSE_WALKWAY01,LON_08_KINGSCOLA,ROAD_MAGNUM_SIDEWALK,ROAD_MAGNUM_SQUARE,LONDRIFT_ RAILWAYBRIDGELIFE,BRIDGEMIDDLE,LC_25_CONCRETE_BLOCK,ROADEDGE0,TWALL03,RMBL_ROADCURB1,PAVEMENTPROMENADE1,ROAD2CON,WESTMINSTER_BRIDGE,ROAD017,ROAD019,ROADEDGE2,ROAD_TWALL21
 SOAKING_MATERIALS =ROADDISTANT2,LON_40_PLAZAD,LON_42_ELIZABETH_HOUSE_WALKWAY01,LON_08_KINGSCOLA,ROAD_MAGNUM_SIDEWALK,ROAD_MAGNUM_SQUARE,LONDRIFT_ RAILWAYBRIDGELIFE,BRIDGEMIDDLE,LC_25_CONCRETE_BLOCK,ROADEDGE0,TWALL03,RMBL_ROADCURB1,PAVEMENTPROMENADE1,ROAD2CON,WESTMINSTER_BRIDGE,ROAD017,ROAD019,ROADEDGE2,ROAD_TWALL21
-SMOOTH_MATERIALS =HEDGE,SKIDM
+SMOOTH_MATERIALS =SKIDM
 ROUGH_MATERIALS =RMBLE74,ROAD024C,ROADPAVEKERB,EVENT_BRIDGE01_ORG00_B,RMBLE74,RMBLE35
-LINES_MATERIALS =ROAD016,ROADEDGE3,ROADEDGE,ROADEDGE4,ROAD018
-LINES_FILTER_MATERIALS =ROAD016,ROADEDGE3,ROADEDGE,ROADEDGE4,ROAD018
+LINES_MATERIALS =SKIDM,ROAD016,ROADEDGE3,ROADEDGE,ROADEDGE4,ROAD018
+LINES_FILTER_MATERIALS =SKIDM,ROAD016,ROADEDGE3,ROADEDGE,ROADEDGE4,ROAD018
 
 [TRACK_OCCLUDER_BOX_0]
 DESCRIPTION=Wide bridge
